--- a/themes/classic/_dev/css/theme.scss
+++ b/themes/classic/_dev/css/theme.scss
@@ -40,6 +40,13 @@
   .logo {
     max-width: 100%;
   }
+
+  #_desktop_logo {
+    h1 {
+      margin-bottom: 0;
+    }
+  }
+
   a {
     color: $gray-darker;
     &:hover {
@@ -49,6 +56,7 @@
   }
   .menu {
     display: inline-block;
+
     > ul {
       > li {
         display: inline-block;
@@ -57,7 +65,6 @@
   }
   .header-nav {
     max-height: 50px;
-    margin-bottom: 30px;
     border-bottom: $gray-light 2px solid;
     #menu-icon {
       margin: 0 1rem;
@@ -145,14 +152,27 @@
     }
   }
   .header-top {
+    padding: 1.25rem 0;
+
     > .container {
       position: relative;
+
+      > .row:first-of-type {
+        display: flex;
+        align-items: center;
+      }
     }
-    padding-bottom: 1.25rem;
+
     .menu {
       padding-left: 15px;
-      margin-bottom: 0.375rem;
     }
+
+    &-right {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
     .position-static {
       position: static;
     }
@@ -270,6 +290,10 @@
     .header-top {
       .search-widget {
         min-width: inherit;
+      }
+
+      &-right {
+        width: 100%;
       }
     }
   }
